--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-    "name": "silverstripe-module/skeleton",
-    "description": "A skeleton for Silverstripe CMS modules.",
+    "name": "purplespider/lumberjack-plus",
+    "description": "Extras for the Silverstripe Lumberjack module",
     "type": "silverstripe-vendormodule",
     "keywords": [
         "silverstripe",
-        "CMS"
+        "CMS",
+        "lumberjack"
     ],
     "license": "BSD-3-Clause",
     "require": {
         "silverstripe/framework": "^5.0",
-        "silverstripe/admin": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -17,14 +17,8 @@
     },
     "autoload": {
         "psr-4": {
-            "SilverStripeModule\\Skeleton\\": "src/",
-            "SilverStripeModule\\Skeleton\\Tests\\": "tests/php/"
+            "PurpleSpider\\LumberjackPlus\\": "src/"
         }
-    },
-    "extra": {
-        "expose": [
-            "client/dist"
-        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true
