--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "license": "BSD-3-Clause",
     "require": {
-        "silverstripe/framework": "^5.0",
+        "silverstripe/framework": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
